fix: a shitton of stuff
